removed failing tests due to missing files, synced more files with 00.36.08

--- a/doc/Makefile.dist
+++ b/doc/Makefile.dist
@@ -5,7 +5,7 @@ CDIR = $(notdir $(CURDIR))
 DESTDIR = $(DISTDIR)/$(CDIR)
 
 DISTFILES = doxygen.config Makefile.dist
-DISTDIRS := tex txt
+DISTDIRS := tex txt pages
 
 dist:
 #	echo $(DESTDIR)
