--- a/database/micro/Makefile.dist
+++ b/database/micro/Makefile.dist
@@ -1,12 +1,12 @@
 # 19.07.2007, c
-# last revision: 19.07.2007
+# last revision: 26.03.2008
 
 CDIR = $(notdir $(CURDIR))
 DESTDIR = $(DISTDIR)/$(CDIR)
 
-DISTFILES := Makefile.dist
+DISTFILES := Makefile.dist MANIFEST
 
-RELDISTFILES := $(DISTFILES) $(shell ls *.mesh)
+RELDISTFILES := $(DISTFILES) $(shell cat MANIFEST)
 
 dist:
 #	echo $(DESTDIR)
