--- a/input/Makefile.dist
+++ b/input/Makefile.dist
@@ -1,17 +1,21 @@
 # 01.08.2006, c
-# last revision: 06.02.2008
+# last revision: 26.03.2008
 
 CDIR = $(notdir $(CURDIR))
 DESTDIR = $(DISTDIR)/$(CDIR)
 
-DISTFILES := $(shell ls *.py) Makefile.dist Makefile.inc
+DISTFILES := $(shell ls *.py) Makefile.dist Makefile.inc MANIFEST
+DISTDIRS := bones pfdpm
 
-RELDISTFILES := inputUtils.py kostka.py le.py navier_stokes.py pfdpm_permeability.py phono.py poisson.py time_poisson.py valec.py Makefile.dist Makefile.inc
+RELDISTFILES := Makefile.dist Makefile.inc MANIFEST $(shell cat MANIFEST)
 
 dist:
 #	echo $(DESTDIR)
 	mkdir $(DESTDIR)
 	cp -fpd $(DISTFILES) $(DESTDIR)
+	@for i in $(DISTDIRS); do \
+		$(MAKE) -C $$i -f Makefile.dist dist DISTDIR=${DESTDIR}; \
+	done
 
 reldist:
 	mkdir $(DESTDIR)
