--- a/tests/Makefile.dist
+++ b/tests/Makefile.dist
@@ -1,12 +1,12 @@
 # 29.05.2007, c
-# last revision: 29.05.2007
+# last revision: 26.03.2008
 
 CDIR = $(notdir $(CURDIR))
 DESTDIR = $(DISTDIR)/$(CDIR)
 
-DISTFILES := $(shell ls *.py) Makefile.dist Makefile.inc
+DISTFILES := $(shell ls *.py) Makefile.dist Makefile.inc MANIFEST
 
-RELDISTFILES := $(DISTFILES)
+RELDISTFILES := Makefile.dist Makefile.inc MANIFEST $(shell cat MANIFEST)
 
 dist:
 #	echo $(DESTDIR)
