--- a/doc/tex/Makefile.dist
+++ b/doc/tex/Makefile.dist
@@ -1,11 +1,11 @@
 # 12.02.2003, c
-# last revision: 14.12.2007
+# last revision: 26.03.2008
 
 CDIR = $(notdir $(CURDIR))
 DESTDIR = $(DISTDIR)/$(CDIR)
 
 DISTFILES = *.tex *.fig *.latex Makefile.dist Makefile.inc
-RELDISTFILES = introduction_slides.tex terms.pdf
+RELDISTFILES = introduction_slides.tex terms.pdf t.pdf
 DISTDIRS := figures
 
 dist:
