--- a/doc/tex/Makefile.dist
+++ b/doc/tex/Makefile.dist
@@ -5,7 +5,7 @@ CDIR = $(notdir $(CURDIR))
 DESTDIR = $(DISTDIR)/$(CDIR)
 
 DISTFILES = *.tex *.fig *.latex Makefile.dist Makefile.inc
-RELDISTFILES = introduction_slides.tex terms.pdf t.pdf
+RELDISTFILES = $(DISTFILES) terms.pdf terms_new.pdf
 DISTDIRS := figures
 
 dist:
