rdirac module renamed to dft.

--- a/sfe/physics/extmods/Makefile.inc
+++ b/sfe/physics/extmods/Makefile.inc
@@ -4,18 +4,18 @@ LOCDIR := sfe/physics/extmods
 SRC_SRCPY := $(shell ls $(LOCDIR)/*.py)
 SRC_OBJPY := $(SRC_SRCPY:.py=.pyc)
 
-DEPSA := rdirac.f
+DEPSA := dft.f
 DEPSA := $(addprefix $(LOCDIR)/,$(DEPSA))
-$(LOCDIR)/rdirac.so: $(DEPSA)
+$(LOCDIR)/dft.so: $(DEPSA)
 	@echo $(DEPSA)
-	f2py --fcompiler=gnu95 --f77flags="-W -Wall -fdefault-real-8" -c -m rdirac $(DEPSA)
-	mv rdirac.so $@
+	f2py --fcompiler=gnu95 --f77flags="-W -Wall -fdefault-real-8" -c -m dft $(DEPSA)
+	mv dft.so $@
 
-SRC_LIBSWIG += $(LOCDIR)/rdirac.so
+SRC_LIBSWIG += $(LOCDIR)/dft.so
 
 #######
 
 SRCCFILES +=
-HDRCFILES += 
+HDRCFILES +=
 SRCPYFILES += $(SRC_SRCPY)
-CLEANFILES += $(SRC_OBJPY) $(LOCDIR)/rdirac.so
+CLEANFILES += $(SRC_OBJPY) $(LOCDIR)/dft.so
