replaced dft.f with dft.c generated by f2c
 - problems: needs to link /usr/lib/libf2c.a, requires f2c.h

--- a/.hgignore
+++ b/.hgignore
@@ -18,6 +18,7 @@ sfepy/fem/extmods/geometry.py
 sfepy/fem/extmods/meshutils.py
 sfepy/terms/extmods/terms.py
 sfepy/fem/extmods/version.h
+sfepy/physics/extmods/dft.py
 VERSION
 tmp/terms.*
 samples/*
