dft.c was rewritten to a better C, so that f2c is not needed anymore.

--- a/sfepy/physics/extmods/Makefile.inc
+++ b/sfepy/physics/extmods/Makefile.inc
@@ -23,7 +23,7 @@ DEPSF := $(addprefix $(LOCDIR)/,$(DEPSF:.c=.o))
 $(LOCDIR)/dft_wrap.c:
 $(LOCDIR)/_dft.so: $(DEPSF)
 	@echo $(DEPSF)
-	$(CC) $(LINKFLAGS) $(DEPSF) $(SWIG_LIB) /usr/lib/libf2c.a -o $@
+	$(CC) $(LINKFLAGS) $(DEPSF) $(SWIG_LIB) -o $@
 
 SRC_LIBSWIG += $(LOCDIR)/_dft.so
 
