enhanced acoustic band gaps code - solved handling of multiple embedded inclusions properly:   - works for a rigid inclusion in a compliant inclusion - changed d_volume_integrate to di_volume_integrate (accept vector variables) - added proper masking of near-zero eigenmomenta   - allow all frequencies masked - fixed_eig_range, fig_name, show options - compute strains corresponding to eigenfunctions - added parametrization capabilities:   - Application base class, AcousticBandGapsApp class   - in input, define a generator editing ProblemDefinition instance in each step   - the generator can set its output prefix   - the generator can obtain application output (coroutine mode)     - logs of band gaps, resonances - parametric cases:   - vary_teps()   - vary_y3_size() - reorganized directories - created input/phono/ - results saved to input/phono/output/ (configurable):   - output directory is created if it does not exist   - better output file numbering - input/phono/plot_gaps.py:   - -o, --same-dir options - eig roots in the log - plot_logs() split -> plot_eigs() - generated gmsh input with concentric circles in Y2:   - input/phono/gen_mesh.py - works for 2D and 3D meshes - settable plotting parameters - both input/phono/band_gaps_rigid.py and input/phono/band_gaps.py work

--- a/sfepy/applications/Makefile.dist
+++ b/sfepy/applications/Makefile.dist
@@ -1,12 +1,9 @@
-# 23.10.2007, c
-# last revision: 23.10.2007
-
 CDIR = $(notdir $(CURDIR))
 DESTDIR = $(DISTDIR)/$(CDIR)
 
-DISTFILES := Makefile.dist
+DISTFILES := $(shell ls *.py) Makefile.dist Makefile.inc
 
-RELDISTFILES := $(DISTFILES) $(shell ls *.mesh) $(shell ls *.geo)
+RELDISTFILES := $(DISTFILES)
 
 dist:
 #	echo $(DESTDIR)
