--- a/sfepy/fem/extmods/Makefile.inc
+++ b/sfepy/fem/extmods/Makefile.inc
@@ -35,7 +35,7 @@ $(LOCDIR)/_fem.so: $(DEPSE)
 SRC_LIBSWIG += $(LOCDIR)/_meshutils.so $(LOCDIR)/_geometry.so $(LOCDIR)/_fem.so
 
 SRC_SRCC := $(shell ls $(LOCDIR)/*.c)
-SRC_SRCC := $(filter-out $(shell ls $(LOCDIR)/*_wrap.c), $(SRC_SRCC))
+SRC_SRCC := $(filter-out $(SRC_OBJSWIGC), $(SRC_SRCC))
 SRC_OBJC := $(SRC_SRCC:.c=.o)
 SRC_HDRC := $(shell ls $(LOCDIR)/*.h)
 
