--- a/sfepy/physics/extmods/Makefile.inc
+++ b/sfepy/physics/extmods/Makefile.inc
@@ -21,7 +21,7 @@ $(LOCDIR)/_dft.so: $(DEPSF)
 SRC_LIBSWIG += $(LOCDIR)/_dft.so
 
 SRC_SRCC := $(shell ls $(LOCDIR)/*.c)
-SRC_SRCC := $(filter-out $(shell ls $(LOCDIR)/*_wrap.c), $(SRC_SRCC))
+SRC_SRCC := $(filter-out $(SRC_OBJSWIGC), $(SRC_SRCC))
 SRC_OBJC := $(SRC_SRCC:.c=.o)
 SRC_HDRC := $(shell ls $(LOCDIR)/*.h)
 
