added simple backtracking steepest descent optimization solver
- from full sources
- kind: opt.fmin_sd

--- a/sfepy/solvers/Makefile.dist
+++ b/sfepy/solvers/Makefile.dist
@@ -1,12 +1,9 @@
-# 01.08.2006, c
-# last revision: 23.10.2007
-
 CDIR = $(notdir $(CURDIR))
 DESTDIR = $(DISTDIR)/$(CDIR)
 
 DISTFILES := $(shell ls *.py) Makefile.dist Makefile.inc
 
-RELDISTFILES := $(filter-out optimize.py, $(DISTFILES))
+RELDISTFILES := $(DISTFILES)
 
 dist:
 #	echo $(DESTDIR)
