improved conditional compilation of development extension modules

--- a/sfepy/fem/extmods/Makefile.inc
+++ b/sfepy/fem/extmods/Makefile.inc
@@ -1,6 +1,6 @@
 LOCDIR := sfepy/fem/extmods
 
-LINKFLAGS := $(shell script/config.py link_flags)
+LINKFLAGS := $(shell $(RUNCONFIG) link_flags)
 
 SRC_SRCPY := $(shell ls $(LOCDIR)/*.py)
 SRC_OBJPY := $(SRC_SRCPY:.py=.pyc)
