--- a/sfepy/terms/extmods/Makefile.inc
+++ b/sfepy/terms/extmods/Makefile.inc
@@ -1,7 +1,7 @@
 FEMLOCDIR := sfepy/fem/extmods
 LOCDIR := sfepy/terms/extmods
 
-LINKFLAGS := $(shell script/config.py link_flags)
+LINKFLAGS := $(shell $(RUNCONFIG) link_flags)
 
 SRC_SRCPY := $(shell ls $(LOCDIR)/*.py)
 SRC_OBJPY := $(SRC_SRCPY:.py=.pyc)
@@ -13,8 +13,11 @@ SRC_OBJSWIGPY := $(SRC_SRCSWIG:.i=.py)
 
 FEMDEPSD = common_python.c fmfield.c geommech.c
 DEPSD := formSDCC.c terms.c termsBasic.c termsAdjointNavierStokes.c termsElectric.c termsHDPM.c termsMass.c termsNavierStokes.c termsBiot.c termsLaplace.c termsLinElasticity.c termsHyperElasticity.c termsPiezo.c termsSurface.c termsVolume.c terms_wrap.c
-ifndef ISFULL
-  DEPSD := $(filter-out termsAdjointNavierStokes.c termsHDPM.c, $(DEPSD))
+ifndef ISOPT
+  DEPSD := $(filter-out termsAdjointNavierStokes.c, $(DEPSD))
+endif
+ifndef ISPOROUS
+  DEPSD := $(filter-out termsHDPM.c, $(DEPSD))
 endif
 DEPSD := $(addprefix $(FEMLOCDIR)/,$(FEMDEPSD:.c=.o)) $(addprefix $(LOCDIR)/,$(DEPSD:.c=.o))
 $(LOCDIR)/terms_wrap.c : $(FEMLOCDIR)/common.i $(FEMLOCDIR)/array.i $(FEMLOCDIR)/fmfield.i
