makefiles: replaced all $(shell ls <pattern>) with $(wildcard <pattern>)
- should make Windows installation more feasible

--- a/database/phono/Makefile.dist
+++ b/database/phono/Makefile.dist
@@ -6,7 +6,7 @@ DESTDIR = $(DISTDIR)/$(CDIR)
 
 DISTFILES := Makefile.dist
 
-RELDISTFILES := $(DISTFILES) $(shell ls *.mesh) $(shell ls *.geo)
+RELDISTFILES := $(DISTFILES) $(wildcard *.mesh) $(wildcard *.geo)
 
 dist:
 #	echo $(DESTDIR)
