--- a/examples/Makefile.inc
+++ b/examples/Makefile.inc
@@ -1,7 +1,7 @@
 # c: 05.05.2008
 LOCDIR := examples
 
-SRC_SRCPY := $(shell ls $(LOCDIR)/*.py)
+SRC_SRCPY := $(wildcard $(LOCDIR)/*.py)
 SRC_OBJPY := $(SRC_SRCPY:.py=.pyc)
 
 #######
