--- a/sfepy/base/Makefile.inc
+++ b/sfepy/base/Makefile.inc
@@ -2,7 +2,7 @@
 # last revision: 11.01.2007
 LOCDIR := sfepy/base
 
-SRC_SRCPY := $(shell ls $(LOCDIR)/*.py)
+SRC_SRCPY := $(wildcard $(LOCDIR)/*.py)
 SRC_OBJPY := $(SRC_SRCPY:.py=.pyc)
 
 #######
