--- a/sfepy/fem/extmods/Makefile.inc
+++ b/sfepy/fem/extmods/Makefile.inc
@@ -2,10 +2,10 @@ LOCDIR := sfepy/fem/extmods
 
 LINKFLAGS := $(shell $(RUNCONFIG) link_flags)
 
-SRC_SRCPY := $(shell ls $(LOCDIR)/*.py)
+SRC_SRCPY := $(wildcard $(LOCDIR)/*.py)
 SRC_OBJPY := $(SRC_SRCPY:.py=.pyc)
 
-SRC_SRCSWIG := $(shell ls $(LOCDIR)/*.i)
+SRC_SRCSWIG := $(wildcard $(LOCDIR)/*.i)
 #SRC_SRCSWIG := $(LOCDIR)/meshutils.i
 SRC_OBJSWIGC := $(SRC_SRCSWIG:.i=_wrap.c)
 SRC_OBJSWIG := $(SRC_OBJSWIGC:.c=.o)
@@ -34,10 +34,10 @@ $(LOCDIR)/_fem.so: $(DEPSE)
 
 SRC_LIBSWIG += $(LOCDIR)/_meshutils.so $(LOCDIR)/_geometry.so $(LOCDIR)/_fem.so
 
-SRC_SRCC := $(shell ls $(LOCDIR)/*.c)
+SRC_SRCC := $(wildcard $(LOCDIR)/*.c)
 SRC_SRCC := $(filter-out $(SRC_OBJSWIGC), $(SRC_SRCC))
 SRC_OBJC := $(SRC_SRCC:.c=.o)
-SRC_HDRC := $(shell ls $(LOCDIR)/*.h)
+SRC_HDRC := $(wildcard $(LOCDIR)/*.h)
 
 
 #######
