--- a/sfepy/physics/Makefile.inc
+++ b/sfepy/physics/Makefile.inc
@@ -1,7 +1,7 @@
 # c: 21.03.2008, r: 21.03.2008
 LOCDIR := sfepy/physics
 
-SRC_SRCPY := $(shell ls $(LOCDIR)/*.py)
+SRC_SRCPY := $(wildcard $(LOCDIR)/*.py)
 SRC_OBJPY := $(SRC_SRCPY:.py=.pyc)
 
 #######
