--- a/sfepy/terms/extmods/Makefile.inc
+++ b/sfepy/terms/extmods/Makefile.inc
@@ -3,10 +3,10 @@ LOCDIR := sfepy/terms/extmods
 
 LINKFLAGS := $(shell $(RUNCONFIG) link_flags)
 
-SRC_SRCPY := $(shell ls $(LOCDIR)/*.py)
+SRC_SRCPY := $(wildcard $(LOCDIR)/*.py)
 SRC_OBJPY := $(SRC_SRCPY:.py=.pyc)
 
-SRC_SRCSWIG := $(shell ls $(LOCDIR)/*.i)
+SRC_SRCSWIG := $(wildcard $(LOCDIR)/*.i)
 SRC_OBJSWIGC := $(SRC_SRCSWIG:.i=_wrap.c)
 SRC_OBJSWIG := $(SRC_OBJSWIGC:.c=.o)
 SRC_OBJSWIGPY := $(SRC_SRCSWIG:.i=.py)
@@ -28,10 +28,10 @@ $(LOCDIR)/_terms.so: $(DEPSD)
 
 SRC_LIBSWIG += $(LOCDIR)/_terms.so
 
-SRC_SRCC := $(shell ls $(LOCDIR)/*.c)
+SRC_SRCC := $(wildcard $(LOCDIR)/*.c)
 SRC_SRCC := $(filter-out $(SRC_OBJSWIGC), $(SRC_SRCC))
 SRC_OBJC := $(SRC_SRCC:.c=.o)
-SRC_HDRC := $(shell ls $(LOCDIR)/*.h)
+SRC_HDRC := $(wildcard $(LOCDIR)/*.h)
 
 #######
 
