--- a/eldesc/Makefile.inc
+++ b/eldesc/Makefile.inc
@@ -2,7 +2,7 @@
 
 LOCDIR := eldesc
 
-SRC_SRCPY := $(shell ls $(LOCDIR)/*.py)
+SRC_SRCPY := $(wildcard $(LOCDIR)/*.py)
 SRC_OBJPY := $(SRC_SRCPY:.py=.pyc)
 
 #######
