--- a/examples/Makefile.dist
+++ b/examples/Makefile.dist
@@ -2,7 +2,7 @@
 CDIR = $(notdir $(CURDIR))
 DESTDIR = $(DISTDIR)/$(CDIR)
 
-DISTFILES := $(shell ls *.py) Makefile.dist Makefile.inc MANIFEST
+DISTFILES := $(wildcard *.py) Makefile.dist Makefile.inc MANIFEST
 DISTDIRS :=
 
 RELDISTFILES := $(DISTFILES) $(shell cat MANIFEST)
