--- a/input/phono/Makefile.inc
+++ b/input/phono/Makefile.inc
@@ -1,6 +1,6 @@
 LOCDIR := input/phono
 
-SRC_SRCPY := $(shell ls $(LOCDIR)/*.py)
+SRC_SRCPY := $(wildcard $(LOCDIR)/*.py)
 SRC_OBJPY := $(SRC_SRCPY:.py=.pyc)
 
 #######
