--- a/sfepy/terms/extmods/Makefile.dist
+++ b/sfepy/terms/extmods/Makefile.dist
@@ -4,10 +4,10 @@
 CDIR = $(notdir $(CURDIR))
 DESTDIR = $(DISTDIR)/$(CDIR)
 
-DISTFILES := $(shell ls *.py *.c *.h *.i *.in) Makefile.dist Makefile.inc
-DISTFILES := $(filter-out $(shell ls *_wrap.c), $(DISTFILES))
+DISTFILES := $(wildcard *.py *.c *.h *.i *.in) Makefile.dist Makefile.inc
+DISTFILES := $(filter-out $(wildcard *_wrap.c), $(DISTFILES))
 
-RELDISTFILES := $(filter-out  $(shell ls termsAdjointNavierStokes.*) $(shell ls termsHDPM.*), $(DISTFILES))
+RELDISTFILES := $(filter-out  $(wildcard termsAdjointNavierStokes.*) $(wildcard termsHDPM.*), $(DISTFILES))
 
 dist:
 #	echo $(DESTDIR)
