--- a/tests/Makefile.inc
+++ b/tests/Makefile.inc
@@ -2,7 +2,7 @@
 # last revision: 14.11.2007 
 LOCDIR := tests
 
-SRC_SRCPY := $(shell ls $(LOCDIR)/*.py)
+SRC_SRCPY := $(wildcard $(LOCDIR)/*.py)
 SRC_OBJPY := $(SRC_SRCPY:.py=.pyc)
 
 #######
