fixed htmldocs Makefile target, doxygen docs generation

--- a/doc/doxygen.config
+++ b/doc/doxygen.config
@@ -3,8 +3,8 @@
 #---------------------------------------------------------------------------
 # Project related configuration options
 #---------------------------------------------------------------------------
-PROJECT_NAME           = SFE
-PROJECT_NUMBER         = NUMBER
+PROJECT_NAME           = SfePy
+PROJECT_NUMBER         = X.Y
 OUTPUT_DIRECTORY       = doc
 OUTPUT_LANGUAGE        = English
 USE_WINDOWS_ENCODING   = NO
@@ -62,16 +62,13 @@ WARN_LOGFILE           =
 # configuration options related to the input files
 #---------------------------------------------------------------------------
 INPUT                  = . \
-                         src \
+                         sfepy \
                          eldesc \
-                         doc/aux/ \
-                         doc/aux/src/ \
-                         doc/aux/eldesc
 FILE_PATTERNS          = *.c \
                          *.h \
                          *.i \
                          *.py
-RECURSIVE              = NO
+RECURSIVE              = YES
 EXCLUDE                = 
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = *_wrap*
