--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-sfepy-projects/*
 Makefile
 site_cfg.py
 TAGS
@@ -8,6 +7,7 @@ output-tests/*
 results/*
 work/*
 auto/*
+database/
 *.vtk
 *.mesh
 *.txt
@@ -20,6 +20,8 @@ auto/*
 *.toc
 *.aux
 *.log
+*.png
+*.pdf
 
 # Generated files:
 sfepy/fem/extmods/fem.py
@@ -32,5 +34,7 @@ VERSION
 tmp/terms.*
 samples/*
 doc/tex/*.pdf
+doc/doxygenrc
+doc/html/
 tmp/*
 
