remove useless Makefile.inc files, update Makefile.dist files
- also include sfepy/optimize/ files in reldist target

--- a/doc/tex/Makefile.dist
+++ b/doc/tex/Makefile.dist
@@ -4,7 +4,7 @@
 CDIR = $(notdir $(CURDIR))
 DESTDIR = $(DISTDIR)/$(CDIR)
 
-DISTFILES = *.tex *.fig *.latex Makefile.dist Makefile.inc
+DISTFILES = *.tex *.fig *.latex Makefile.dist
 RELDISTFILES = $(DISTFILES)
 DISTDIRS := figures
 
