--- a/sfepy/linalg/Makefile.dist
+++ b/sfepy/linalg/Makefile.dist
@@ -1,7 +1,7 @@
 CDIR = $(notdir $(CURDIR))
 DESTDIR = $(DISTDIR)/$(CDIR)
 
-DISTFILES := $(wildcard *.py) Makefile.dist Makefile.inc
+DISTFILES := $(wildcard *.py) Makefile.dist
 DISTDIRS := extmods
 
 dist:
