--- a/sfepy/terms/extmods/Makefile.dist
+++ b/sfepy/terms/extmods/Makefile.dist
@@ -1,19 +1,11 @@
-# 14.12.2004, c
-# last revision: 26.02.2007
-
 CDIR = $(notdir $(CURDIR))
 DESTDIR = $(DISTDIR)/$(CDIR)
 
 DISTFILES := $(wildcard *.py *.c *.h *.i *.in) Makefile.dist Makefile.inc
 DISTFILES := $(filter-out $(wildcard *_wrap.c), $(DISTFILES))
 
-RELDISTFILES := $(filter-out  $(wildcard termsAdjointNavierStokes.*), $(DISTFILES))
-
 dist:
-#	echo $(DESTDIR)
 	mkdir $(DESTDIR)
-	cp -fpd $(DISTFILES) $(DESTDIR)
+	cp -fa $(DISTFILES) $(DESTDIR)
 
-reldist:
-	mkdir $(DESTDIR)
-	cp -fpd $(RELDISTFILES) $(DESTDIR)
+reldist: dist
