move contents of terms.c into geommech.c

--- a/sfepy/terms/extmods/Makefile.inc
+++ b/sfepy/terms/extmods/Makefile.inc
@@ -12,7 +12,7 @@ SRC_OBJSWIG := $(SRC_OBJSWIGC:.c=.o)
 SRC_OBJSWIGPY := $(SRC_SRCSWIG:.i=.py)
 
 FEMDEPSD = common_python.c fmfield.c geommech.c
-DEPSD := formSDCC.c terms.c termsBasic.c termsAdjointNavierStokes.c termsElectric.c termsHDPM.c termsMass.c termsNavierStokes.c termsBiot.c termsLaplace.c termsLinElasticity.c termsHyperElasticity.c termsPiezo.c termsSurface.c termsVolume.c terms_wrap.c termsAcoustic.c
+DEPSD := formSDCC.c termsBasic.c termsAdjointNavierStokes.c termsElectric.c termsHDPM.c termsMass.c termsNavierStokes.c termsBiot.c termsLaplace.c termsLinElasticity.c termsHyperElasticity.c termsPiezo.c termsSurface.c termsVolume.c terms_wrap.c termsAcoustic.c
 ifndef ISOPT
   DEPSD := $(filter-out termsAdjointNavierStokes.c, $(DEPSD))
 endif
